@@ -1,3 +1,7 @@
+2006-06-11  Don Allingham  <don@gramps-project.org>
+	* src/GrampsDb/_ReadGedcom.py: fix event parsing
+	* src/GramspDb/_GedcomInfo.py: fix ORDN identification
+
 2006-06-10  Don Allingham  <don@gramps-project.org>
 	* src/GrampsDb/_ReadGedcom.py: fixes based of the gedcom torture test
 	* src/GrampsDb/_GedTokeys.py: fixes based of the gedcom torture test
